# ForknFetch

./: .dockerignore  Dockerfile  Fork&Fetch.py  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: index.html
stages/: embedder.py  pipeline.py  preprocessor.py
