[project]
name = "forknfetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "ipykernel>=7.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "pandas>=3.0.3",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
